# slippage

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
clients/js/: README.md  package.json  pnpm-lock.yaml
clients/js/test/: _setup.ts  assert.test.ts
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: entrypoint.rs  lib.rs
scripts/: generate-clients.mjs
